@@ -1,5 +1,11 @@
 2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* libstetic/wrapper/Action.cs: Generate initialization of the Active
+	  and DrawAsRadio properties. They are not generated by default
+	  because they belong to a Gtk.Action subclass. Fixes bug #81785.
+
+2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* libsteticui/ProjectBackend.cs, libsteticui/Project.cs: Added method
 	  for getting all widget types included in a project.
 	* libstetic/wrapper/objects.xml: Gtk.Bin now inherits the properties of
